# Unite

./: .gitignore  Config.qml  GlobalState.qml  README.md  Theme.qml  config.json  debug.sh  shell.qml
modules/: BlurMask.qml  Spacer.qml
modules/dash/: Dash.qml  DashBorders.qml  DashContent.qml  DashContentApps.qml  DashContentFolders.qml  DashContentHome.qml  DashContentMusic.qml  DashContentPhotos.qml  DashContentVideos.qml  DashLens.qml  DashLensButton.qml  DashSearch.qml  DashShelf.qml  DashShelfHeader.qml  DashShelfItem.qml  QuickSearchTest.qml
modules/menubar/: MenuItem.qml  MenuSplitter.qml  Menubar.qml  MenubarButton.qml  MenubarCalendar.qml  MenubarClock.qml  MenubarMenu.qml  MenubarShadow.qml  MenubarSystemTray.qml  MenubarSystemTrayIcon.qml
modules/modal/: Modal.qml
modules/popups/: PopupBase.qml  PopupTooltip.qml
modules/taskbar/: DashButton.qml  TaskList.qml  TaskListItem.qml  Taskbar.qml
modules/wallpaper/: OverviewWallpaper.qml  Wallpaper.qml  WallpaperSource.qml
plugins/quicksearch/: API.md  CMakeLists.txt  README.md  build.sh  example.qml  quicksearch.cpp  quicksearch.h  test-applications.qml  test.qml
plugins/quicksearch/internal/: cachingimagemanager.cpp  cachingimagemanager.hpp
plugins/quicksearch/models/: desktopentry.cpp  desktopentry.hpp  filesystemmodel.cpp  filesystemmodel.hpp  fuzzysearch.cpp  fuzzysearch.hpp
shaders/: InverseCorner.frag  InverseCorner.glsl  Quantize.frag  Quantize.glsl  TaskIconGlow.frag  TaskIconGlow.glsl  build.sh
themes/ambiance/: dash.json  menubar.json  taskbar.json  tasklistitem.json
themes/default/: dash.json
themes/square/: menubar.json  taskbar.json  tasklistitem.json
